--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" th:replace="~{base::parent(~{::#content},~{::title},~{})}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Services Page</title>
 </head>
 <body>
-    <h1>This is services page</h1>
-    <div th:replace = "~{base::parent_var('Services_One','Services_Two')}"></div>
+    <div id="content">
+        <h1>Welcome to services page</h1>
+        <h2>Service offered by SCM</h2>
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+    
 </body>
 </html>
