--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html class="light" lang="en" th:fragment="parent(content,title,script)" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" th:fragment="parent(content,title,script)" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:replace="${title}">SCM</title>
+    <!-- Tailwind -->
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
+    <!-- Flobite -->
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body class="dark:bg-gray-900 dark:text-white">
     <!-- Common Header -->
@@ -23,6 +28,7 @@
 
     <!-- Flow Bite Content -->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+    <script th:src="@{'/JS/ThemeChangeScript.js'}"></script>
     <th:block th:replace="${script}"></th:block>
 </body>
 </html>
