Signup Page ready

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
-<body class="dark:bg-gray-900 dark:text-white">
+<body class="dark:bg-gray-900 dark:text-white bg-gray-300">
     <!-- Common Header -->
     <div th:replace="~{navbar::navbar}"></div>
 
@@ -22,9 +22,10 @@
     </div>
     <!-- Common Footer -->
 
+<!-- 
     <footer class="p-4">
         Footer: This is common footer.
-    </footer>
+    </footer> -->
 
     <!-- Flow Bite Content -->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
