--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -14,6 +14,9 @@
                 
                 <div class="block p-6 border-t-8 border-blue-700 bg-white rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
 
+                    <!-- Alert Message Here -->
+                    <div data-th-replace="~{message::messagebox}"></div>
+
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                         Signup Here
                     </h5>
