Signup Form Validation & added spring boot starter security dependency to protect user based APIs

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -30,7 +30,8 @@
                     <form data-th-action = "@{'/do-register'}"
                     method = "post"
                     data-th-object="${userForm}"
-                    class="max-w-sm mx-auto">
+                    class="max-w-sm mx-auto"
+                    novalidate>
 
                         <!-- Name -->
                         <div class="mb-2">
@@ -42,6 +43,13 @@
                             id="name"
                             data-th-field="*{name}"
                             class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" placeholder="Enter you name here" required />
+
+                            <p
+                            data-th-if="${#fields.hasErrors('name')}"
+                            data-th-errors="*{name}"
+                            class="text-red-500 px-1 py-2">
+                                User is required
+                            </p>
                         </div>
 
                         <!-- Email -->
@@ -56,6 +64,14 @@
                             data-th-field="*{email}"
                             id="email"
                             class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" placeholder="Enter your E-mail here" required />
+
+                            <p
+                            data-th-if="${#fields.hasErrors('email')}"
+                            data-th-errors="*{email}"
+                            class="text-red-500 px-1 py-2">
+                                Email is required
+                            </p>
+
                         </div>
 
                         <!-- Password -->
@@ -70,6 +86,14 @@
                             data-th-field="*{password}"
                             id="password"
                             class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+
+                            <p
+                            data-th-if="${#fields.hasErrors('password')}"
+                            data-th-errors="*{password}"
+                            class="text-red-500 px-1 py-2">
+                                Password is required
+                            </p>
+
                         </div>
 
                         <!-- Contact Number -->
@@ -84,6 +108,14 @@
                             data-th-field="*{phoneNumber}"
                             id="phone"
                             class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+
+                            <p
+                            data-th-if="${#fields.hasErrors('phoneNumber')}"
+                            data-th-errors="*{phoneNumber}"
+                            class="text-red-500 px-1 py-2">
+                                Contact is required
+                            </p>
+
                         </div>
                         
                         <!-- About -->
@@ -99,6 +131,14 @@
                             rows="4"
                             class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write about yourself...">
                             </textarea>
+
+                            <p
+                            data-th-if="${#fields.hasErrors('about')}"
+                            data-th-errors="*{about}"
+                            class="text-red-500 px-1 py-2">
+                                About is required
+                            </p>
+
                         </div>
 
                         <div class="flex justify-center space-x-3">
