--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -6,6 +6,8 @@
     <title th:replace="${title}">SCM</title>
     <!-- Tailwind -->
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
+    <!-- My CSS -->
+    <link rel="stylesheet" data-th-href="@{'/css/style.css'}"/>
     <!-- Flobite -->
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
     <!-- Font Awesome -->
