--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -87,10 +87,19 @@
                         </div>
                         
                     </form>
+
+                    <div class="social-login-button flex justify-center mt-5">
+
+                        <a
+                        class = "login-with-google-btn"
+                        data-th-href="@{'/oauth2/authorization/google'}">
+                            Login With Google
+                        </a>
+
+                    </div>
                 </div>
             </div>
-        </div>
-        
+        </div>        
     </div>
     <script>
         console.log("Login page")
