--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -88,14 +88,24 @@
                         
                     </form>
 
-                    <div class="social-login-button flex justify-center mt-5">
+                    <div class="social-login-button flex justify-center space-x-4">
 
-                        <a
-                        class = "login-with-google-btn"
-                        data-th-href="@{'/oauth2/authorization/google'}">
-                            Login With Google
+                        <a 
+                        data-th-href="@{'/oauth2/authorization/google'}"
+                        type="button"
+                        class="flex items-center justify-center dark:bg-gray-800 px-4 py-2 border w-full gap-2 mt-5 border-slate-200 dark:border-slate-700 rounded-lg text-slate-700 dark:text-slate-200 hover:border-slate-400 dark:hover:border-slate-500 hover:text-slate-900 dark:hover:text-slate-300 hover:shadow transition duration-150">
+                            <img class="w-6 h-6" data-th-src="@{'/Images/google.svg'}" loading="lazy" alt="google logo">
+                            <span>Login with Google</span>
                         </a>
 
+                        <a 
+                        data-th-href="@{'/oauth2/authorization/github'}"
+                        type="button"
+                        class="flex items-center justify-center dark:bg-gray-800 px-4 py-2 border w-full gap-2 mt-5 border-slate-200 dark:border-slate-700 rounded-lg text-slate-700 dark:text-slate-200 hover:border-slate-400 dark:hover:border-slate-500 hover:text-slate-900 dark:hover:text-slate-300 hover:shadow transition duration-150">
+                            <img class="w-6 h-6" data-th-src="@{'/Images/github.svg'}" loading="lazy" alt="github logo">
+                            <span>Login with Github</span>
+                        </a>
+                        
                     </div>
                 </div>
             </div>
