--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" th:replace="~{base::parent(~{::#content},~{::title},~{::script})}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title data-th-text="${loggedInUser.name} + ' | SCM'">Profile Page</title>
 </head>
 <body>
-    <h1>this is user profile page</h1>
+    <div id="content">
+        <h1>Welcome to profile page</h1>
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+    <script>
+        console.log("Profile page")
+    </script>
 </body>
 </html>
