--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h1>this is user dashboard</h1>
+    <h1 data-th-text="${loggedInUser.name}"></h1>
+    <h1 data-th-text="${loggedInUser.email}"></h1>
+
+    <!-- Agar user logged in ho to ye div chalani hai -->
+
+    <div data-th-if="${loggedInUser}">
+        <h1>User is logged in</h1>
+        <h1>this is logged in section</h1>
+    </div>
+
     <a href="@{'/logout'}">Logout</a>
 </body>
 </html>
