--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -6,13 +6,18 @@
 <body>
     <div id="content">
         <div data-th-if="${loggedInUser}">
-            <div data-th-replace="~{user/side_nav::nav}"></div>
+            <!-- <div data-th-replace="~{user/side_nav::nav}"></div> -->
             <div data-th-replace="~{user/side_nav::side}"></div>
         </div>
-        <div class="pt-16 pl-64">
-            <h1>Welcome to profile page</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <img data-th-src="@{'/Images/github.svg'}"/>
+        <div class="sm:pl-64">
+            <div class="flex justify-center flex-col items-center gap-2 text-wrap">
+
+                <h1 class="text-5xl">Welcome to profile page</h1>
+                <p>Lorem ipsum dolor sit amet.</p>
+
+            </div>
+            
+
         </div>
     </div>
     <script>
