--- a/src/main/resources/templates/user/side_nav.html
+++ b/src/main/resources/templates/user/side_nav.html
@@ -18,8 +18,9 @@ class="fixed top-0 z-50 w-full bg-white border-b border-gray-200 dark:bg-gray-80
         <div class="flex items-center">
             <div class="flex items-center ms-3 gap-2">
 
+                <!-- theme change button -->
                 <div class="h-10">
-                    <button data-th-replace="~{navbar::theme_button}"></button>
+                    <button data-th-replace="~{themebutton::theme_button}"></button>
                 </div>
 
               <div>
@@ -40,7 +41,7 @@ class="fixed top-0 z-50 w-full bg-white border-b border-gray-200 dark:bg-gray-80
                 </div>
                 <ul class="py-1" role="none">
                   <li>
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">Dashboard</a>
+                    <a data-th-href="@{'/user/dashboard'}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">Dashboard</a>
                   </li>
                   <li>
                     <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">Settings</a>
